# analytics-agent

./: .gitignore  DEMO_TOOLS_GUIDE.md  MIGRATION_SUMMARY.md  README.md  REASONING_MODELS.md  RUNNING_THE_APP.md  SKILLS_ARCHITECTURE_DIAGRAM.txt  SKILLS_IMPLEMENTATION.md  UI_RENDERING_GUIDE.md  adk.yaml  main.py  pyproject.toml
.github/instructions/: adk-agent-architect.instructions.md  liquidity-quant-analyst.instructions.md
risk-analytics-frontend/: README.md  package.json
risk-analytics-frontend/scripts/: run-agent.bat  run-agent.sh  setup-agent.bat  setup-agent.sh
risk-analytics-frontend/src/app/: layout.tsx  page.tsx
risk-analytics-frontend/src/components/: AgentCapabilities.tsx  AnalysisDashboard.tsx  AnalysisResults.tsx  AnomalyCard.tsx  DataTable.tsx  DynamicTable.tsx  MetricsCard.tsx
risk-analytics-frontend/src/lib/: types.ts
skills/: QUICKSTART.md  README.md  test_skills.py
skills/anomaly-detection/: SKILL.md
skills/anomaly-detection/references/: statistical_methods.md
skills/examples/: inline_skills_example.py
skills/mlo-analysis/: SKILL.md
skills/mlo-analysis/assets/: mlo_schema.sql
skills/mlo-analysis/references/: mlo_calculations.md
src/risk_analytics_agent/: agent.py  app.py  config.py  models.py  server.py  snowflake_client.py
src/risk_analytics_agent/.adk/: session.db
src/risk_analytics_agent/config/: models.yaml  snowflake.yaml
src/risk_analytics_agent/orchestrator/: agent.py  prompt.py
src/risk_analytics_agent/orchestrator/.adk/: session.db
src/risk_analytics_agent/sub_agents/: mock_tools.py
src/risk_analytics_agent/sub_agents/.adk/: session.db
src/risk_analytics_agent/sub_agents/anomaly_detection/: agent.py  prompt.py  tools.py
src/risk_analytics_agent/sub_agents/data_retrieval/: agent.py  prompt.py  tools.py
src/risk_analytics_agent/sub_agents/drilldown_analysis/: agent.py  prompt.py  tools.py
src/risk_analytics_agent/sub_agents/quantitative_analysis/: agent.py  prompt.py  tools.py
src/risk_analytics_agent/sub_agents/report_generation/: agent.py  prompt.py  tools.py
src/risk_analytics_agent/sub_agents/schema_discovery/: agent.py  prompt.py  tools.py
src/risk_analytics_agent/sub_agents/variance_analysis/: agent.py  prompt.py  tools.py
(+3 files in other folders)
